[gd_scene load_steps=6 format=4 uid="uid://dl6aas2blibs6"]

[ext_resource type="Script" path="res://Scripts/Levels/EncounterDoubleRoom.gd" id="1_ubr1f"]
[ext_resource type="TileSet" uid="uid://dcy4xc7kldp64" path="res://Scenes/Levels/Map TileSet.tres" id="2_vqrkc"]
[ext_resource type="PackedScene" uid="uid://d5vnx4pfaemd" path="res://Scenes/Levels/EnemySpawnPoint.tscn" id="3_fcpmp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sp4bs"]
size = Vector2(245, 230)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hhnhp"]
size = Vector2(20, 24)

[node name="EncounterDoubleRoom" type="Node2D"]
script = ExtResource("1_ubr1f")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAABAPj/AAAMAAAAAAABAPn/AQAKAAEAAAABAPr/AQAKAAEAAAABAPv/AQAKAAAAAAABAPz/AQAJAAIAAAABAP3/AQAGAAIAAAABAP7/AQALAAIAAAABAP//AQALAAIAAAABAAAAAQALAAIAAAABAAEAAQALAAIAAAABAAIAAQALAAIAAAABAAMAAQALAAIAAAABAAQAAQALAAIAAAABAAUAAQALAAMAAAABAAYAAQAKAAEAAAABAAcAAAANAAMAAAABAAgAAAAAAAMAAAACAPj/AAADAAAAAAACAPn/AQAKAAEAAAACAPr/AQAKAAEAAAACAPv/AQAKAAAAAAACAPz/AQAJAAIAAAACAP3/AQAJAAMAAAACAP7/AQAKAAEAAAACAP//AQAKAAEAAAACAAAAAQAKAAEAAAACAAEAAQAKAAEAAAACAAIAAQAKAAEAAAACAAMAAQAKAAEAAAACAAQAAQAKAAEAAAACAAUAAQAKAAEAAAACAAYAAQAKAAEAAAACAAcAAAABAAIAAAACAAgAAAAAAAMAAAADAPj/AAAKAAAAAAADAPn/AQAKAAEAAAADAPr/AQAKAAEAAAADAPv/AQAKAAAAAAADAPz/AQAJAAIAAAADAP3/AQAJAAMAAAADAP7/AQAKAAEAAAADAP//AQAKAAEAAAADAAAAAQAKAAEAAAADAAEAAQAKAAEAAAADAAIAAQAKAAEAAAADAAMAAQAKAAEAAAADAAQAAQAKAAEAAAADAAUAAQAKAAEAAAADAAYAAQAKAAEAAAADAAcAAAABAAIAAAADAAgAAAAAAAMAAAAEAPj/AAALAAAAAAAEAPn/AQAAAAAAAAAEAPr/AQAAAAEAAAAEAPv/AQAHAAEAAAAEAPz/AQALAAIAAAAEAP3/AQALAAMAAAAEAP7/AQAKAAEAAAAEAP//AQAKAAEAAAAEAAAAAQAKAAEAAAAEAAEAAQAKAAEAAAAEAAIAAQAKAAEAAAAEAAMAAQAKAAEAAAAEAAQAAQAKAAEAAAAEAAUAAQAKAAEAAAAEAAYAAQAKAAEAAAAEAAcAAAABAAIAAAAEAAgAAAAAAAMAAAAFAPj/AAAMAAAAAAAFAPn/AQAKAAEAAAAFAPr/AQAKAAEAAAAFAPv/AQAKAAEAAAAFAPz/AQAKAAEAAAAFAP3/AQAKAAEAAAAFAP7/AQAKAAEAAAAFAP//AQAKAAEAAAAFAAAAAQAKAAEAAAAFAAEAAQAKAAEAAAAFAAIAAQAKAAEAAAAFAAMAAQAKAAEAAAAFAAQAAQAKAAEAAAAFAAUAAQAKAAEAAAAFAAYAAQAKAAEAAAAFAAcAAAABAAIAAAAFAAgAAAAAAAMAAAAGAPj/AAADAAAAAAAGAPn/AQAKAAEAAAAGAPr/AQAKAAEAAAAGAPv/AQAKAAEAAAAGAPz/AQAKAAEAAAAGAP3/AQAKAAEAAAAGAP7/AQAKAAEAAAAGAP//AQAKAAEAAAAGAAAAAQAKAAEAAAAGAAEAAQAKAAEAAAAGAAIAAQAKAAEAAAAGAAMAAQAKAAEAAAAGAAQAAQAKAAEAAAAGAAUAAQAKAAEAAAAGAAYAAQAKAAEAAAAGAAcAAAABAAIAAAAGAAgAAAAAAAMAAAAHAPj/AAADAAAAAAAHAPn/AQAKAAEAAAAHAPr/AQAKAAEAAAAHAPv/AQAKAAEAAAAHAPz/AQAKAAEAAAAHAP3/AQAKAAEAAAAHAP7/AQAKAAEAAAAHAP//AQAKAAEAAAAHAAAAAQAKAAEAAAAHAAEAAQAKAAEAAAAHAAIAAQAKAAEAAAAHAAMAAQAKAAEAAAAHAAQAAQAKAAEAAAAHAAUAAQAKAAEAAAAHAAYAAQAKAAEAAAAHAAcAAAABAAIAAAAHAAgAAAAAAAMAAAAIAPj/AAAAAAAAAAAIAPn/AAADAAIAAAAIAPr/AAADAAIAAAAIAPv/AAADAAIAAAAIAPz/AAADAAIAAAAIAP3/AAADAAIAAAAIAP7/AAADAAIAAAAIAP//AAADAAIAAAAIAAAAAAADAAIAAAAIAAEAAAADAAIAAAAIAAIAAAADAAIAAAAIAAMAAAADAAIAAAAIAAQAAAADAAIAAAAIAAUAAAADAAIAAAAIAAYAAAADAAIAAAAIAAcAAAADAAMAAAAIAAgAAAAAAAMAAAAJAPj/AAAAAAMAAAAJAPn/AAAAAAMAAAAJAPr/AAAAAAMAAAAJAPv/AAAAAAMAAAAJAPz/AAAAAAMAAAAJAP3/AAAAAAMAAAAJAP7/AAAAAAMAAAAJAP//AAAAAAMAAAAJAAAAAAAAAAMAAAAJAAEAAAAAAAMAAAAJAAIAAAAAAAMAAAAJAAMAAAAAAAMAAAAJAAQAAAAAAAMAAAAJAAUAAAAAAAMAAAAJAAYAAAAAAAMAAAAJAAcAAAAAAAMAAAAJAAgAAAAAAAMAAAD3//f/AAAAAAMAAAD3//j/AAAAAAMAAAD3//n/AAAAAAMAAAD3//r/AAAAAAMAAAD3//v/AAAAAAMAAAD3//z/AAAAAAMAAAD3//3/AAAAAAMAAAD3//7/AAAAAAMAAAD3////AAAAAAMAAAD3/wAAAAAAAAMAAAD3/wEAAAAAAAMAAAD3/wIAAAAAAAMAAAD3/wMAAAAAAAMAAAD3/wQAAAAAAAMAAAD3/wUAAAAAAAMAAAD3/wYAAAAAAAMAAAD3/wcAAAAAAAMAAAD3/wgAAAAAAAMAAAD4//f/AAAAAAMAAAD4//j/AAABAAMAAAD4//n/AAABAAAAAAD4//r/AAABAAAAAAD4//v/AAABAAAAAAD4//z/AAABAAAAAAD4//3/AAABAAAAAAD4//7/AAABAAAAAAD4////AAABAAAAAAD4/wAAAAABAAAAAAD4/wEAAAABAAAAAAD4/wIAAAABAAAAAAD4/wMAAAABAAAAAAD4/wQAAAABAAAAAAD4/wUAAAABAAAAAAD4/wYAAAABAAAAAAD4/wcAAAAAAAIAAAD4/wgAAAAAAAMAAAD5//f/AAAAAAMAAAD5//j/AAADAAAAAAD5//n/AQAKAAEAAAD5//r/AQAKAAEAAAD5//v/AQAKAAEAAAD5//z/AQAKAAEAAAD5//3/AQAKAAEAAAD5//7/AQAKAAEAAAD5////AQAKAAEAAAD5/wAAAQAKAAEAAAD5/wEAAQAKAAEAAAD5/wIAAQAKAAEAAAD5/wMAAQAKAAEAAAD5/wQAAQAKAAEAAAD5/wUAAQAKAAEAAAD5/wYAAQAKAAEAAAD5/wcAAAABAAIAAAD5/wgAAAAAAAMAAAD6//f/AAAAAAMAAAD6//j/AAADAAAAAAD6//n/AQAKAAEAAAD6//r/AQAKAAEAAAD6//v/AQAKAAEAAAD6//z/AQAKAAEAAAD6//3/AQAKAAEAAAD6//7/AQAKAAEAAAD6////AQAKAAEAAAD6/wAAAQAKAAEAAAD6/wEAAQAKAAEAAAD6/wIAAQAKAAEAAAD6/wMAAQAKAAEAAAD6/wQAAQAKAAEAAAD6/wUAAQAKAAEAAAD6/wYAAQAKAAEAAAD6/wcAAAABAAIAAAD6/wgAAAAAAAMAAAD7//f/AAAAAAMAAAD7//j/AAAKAAAAAAD7//n/AQAKAAEAAAD7//r/AQAKAAEAAAD7//v/AQAKAAEAAAD7//z/AQAKAAEAAAD7//3/AQAKAAEAAAD7//7/AQAKAAEAAAD7////AQAKAAEAAAD7/wAAAQAKAAEAAAD7/wEAAQAKAAEAAAD7/wIAAQAKAAEAAAD7/wMAAQAKAAEAAAD7/wQAAQAKAAEAAAD7/wUAAQAKAAEAAAD7/wYAAQAKAAEAAAD7/wcAAAABAAIAAAD7/wgAAAAAAAMAAAD8//f/AAAAAAMAAAD8//j/AAALAAAAAAD8//n/AQAAAAAAAAD8//r/AQAAAAEAAAD8//v/AQAEAAEAAAD8//z/AQAIAAEAAAD8//3/AQAIAAMAAAD8//7/AQAKAAEAAAD8////AQAKAAEAAAD8/wAAAQAKAAEAAAD8/wEAAQAKAAEAAAD8/wIAAQAKAAEAAAD8/wMAAQAKAAEAAAD8/wQAAQAKAAEAAAD8/wUAAQAKAAEAAAD8/wYAAQAKAAEAAAD8/wcAAAABAAIAAAD8/wgAAAAAAAMAAAD9//f/AAAAAAMAAAD9//j/AAAMAAAAAAD9//n/AQAKAAEAAAD9//r/AQAKAAEAAAD9//v/AQAKAAAAAAD9//z/AQAJAAIAAAD9//3/AQAJAAMAAAD9//7/AQAKAAEAAAD9////AQAKAAEAAAD9/wAAAQAKAAEAAAD9/wEAAQAKAAEAAAD9/wIAAQAKAAEAAAD9/wMAAQAKAAEAAAD9/wQAAQAKAAEAAAD9/wUAAQAKAAEAAAD9/wYAAQAKAAEAAAD9/wcAAAABAAIAAAD9/wgAAAAAAAMAAAD+//f/AAAAAAMAAAD+//j/AAADAAAAAAD+//n/AQAKAAEAAAD+//r/AQAKAAEAAAD+//v/AQAKAAAAAAD+//z/AQAJAAIAAAD+//3/AQAJAAMAAAD+//7/AQAKAAEAAAD+////AQAKAAEAAAD+/wAAAQAKAAEAAAD+/wEAAQAKAAEAAAD+/wIAAQAKAAEAAAD+/wMAAQAKAAEAAAD+/wQAAQAKAAEAAAD+/wUAAQAKAAEAAAD+/wYAAQAKAAEAAAD+/wcAAAABAAIAAAD+/wgAAAAAAAMAAAD///f/AAAAAAMAAAD///j/AAAKAAAAAAD///n/AQAKAAEAAAD///r/AQAKAAEAAAD///v/AQAKAAAAAAD///z/AQAJAAIAAAD///3/AQAFAAIAAAD///7/AQAIAAEAAAD/////AQAIAAEAAAD//wAAAQAIAAEAAAD//wEAAQAIAAEAAAD//wIAAQAIAAEAAAD//wMAAQAIAAEAAAD//wQAAQAIAAEAAAD//wUAAQAIAAMAAAD//wYAAQAKAAEAAAD//wcAAAALAAMAAAD//wgAAAAAAAMAAAAAAPf/AAAAAAMAAAAAAPj/AAADAAAAAAAAAPn/AQAKAAEAAAAAAPr/AQAKAAEAAAAAAPv/AQAKAAAAAAAAAPz/AQAJAAIAAAAAAP3/AQAJAAIAAAAAAP7/AQAJAAIAAAAAAP//AQAJAAIAAAAAAAAAAQAJAAIAAAAAAAEAAQAJAAIAAAAAAAIAAQAJAAIAAAAAAAMAAQAJAAIAAAAAAAQAAQAJAAIAAAAAAAUAAQAKAAMAAAAAAAYAAQAAAAIAAAAAAAcAAAAMAAMAAAAAAAgAAAAAAAMAAAABAPf/AAAAAAMAAAACAPf/AAAAAAMAAAADAPf/AAAAAAMAAAAEAPf/AAAAAAMAAAAFAPf/AAAAAAMAAAAGAPf/AAAAAAMAAAAHAPf/AAAAAAMAAAAIAPf/AAAAAAMAAAAJAPf/AAAAAAMAAAA=")
tile_set = ExtResource("2_vqrkc")
metadata/_edit_lock_ = true

[node name="SpawnPoints" type="Node2D" parent="."]
position = Vector2(-70, 22)

[node name="EnemySpawnPoint" parent="SpawnPoints" instance=ExtResource("3_fcpmp")]
position = Vector2(3, -82)
type = "bat"

[node name="EnemySpawnPoint2" parent="SpawnPoints" instance=ExtResource("3_fcpmp")]
position = Vector2(152, -81)
type = "skeleton"

[node name="EnemySpawnPoint3" parent="SpawnPoints" instance=ExtResource("3_fcpmp")]
type = "goblin"

[node name="EnemySpawnPoint4" parent="SpawnPoints" instance=ExtResource("3_fcpmp")]
position = Vector2(153, -4)
type = "skeleton"

[node name="PlayerDetection" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
position = Vector2(7, -1)
shape = SubResource("RectangleShape2D_sp4bs")

[node name="RoomEnter" type="Marker2D" parent="."]
position = Vector2(8, 104)

[node name="RoomExit1" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="RoomExit1"]
position = Vector2(-56, -116)
shape = SubResource("RectangleShape2D_hhnhp")

[node name="RoomExit2" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="RoomExit2"]
position = Vector2(72, -113)
shape = SubResource("RectangleShape2D_hhnhp")

[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_entered" from="RoomExit1" to="." method="_on_room_exit_1_body_entered"]
[connection signal="body_entered" from="RoomExit2" to="." method="_on_room_exit_2_body_entered"]
